# kcomp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.sh  benchmark_all.sh  benchmark_multi.sh  benchmark_results.csv  kcomp.rb  test.sh
src/: main.cpp
src/core/: benchmark.cpp  benchmark.hpp  progress.hpp  range_coder.cpp  range_coder.hpp
src/io/: buffer.hpp  file_io.cpp  file_io.hpp
src/models/: bwt.cpp  bwt.hpp  cm.cpp  cm.hpp  dict.cpp  dict.hpp  lz77.cpp  lz77.hpp  lzma.cpp  lzma.hpp  lzopt.cpp  lzopt.hpp  lzx.cpp  lzx.hpp  match_model.hpp  mixer.cpp  mixer.hpp  model257.cpp  model257.hpp  ppm.cpp  ppm.hpp  rle.cpp  rle.hpp
testdata/: archive.tar  binary.elf  csv_data.csv  english_50k.txt  json_data.json  repeated_60k.txt  source_code.txt  webpage.html  xml_data.xml
tests/: run_tests.sh  test_bwt_bug.cpp  test_corruption.cpp  test_edge_cases.cpp  test_file_formats.cpp  test_modes.cpp  test_performance.cpp  test_roundtrip.cpp  test_stress.cpp  test_transforms.cpp
